--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -477,6 +477,7 @@
         "byTotal": "By total",
         "towHour": "It will arrive in two hours",
         "advertising": "OTC",
+        "zixuan": "OTC",
         "payToAddress": "Please pay to this",
         "waitingOther": "Waiting for other party to confirm",
         "waitingForPayment": "Waiting for payment",
