--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -475,6 +475,7 @@
         "quick": "一键",
         "noOrder": "暂无匹配订单",
         "shortcut": "快捷",
+        "zixuan": "自选",
         "byAmount": "按金额购买",
         "byTotal": "按数量购买",
         "towHour": "2小时到账",
