--- a/src/assets/lang/zh-tw.json
+++ b/src/assets/lang/zh-tw.json
@@ -471,6 +471,7 @@
         "quick": "一鍵",
         "noOrder": "暫無匹配訂單",
         "shortcut": "快捷",
+        "zixuan": "自選",
         "byAmount": "按金額購買",
         "byTotal": "按數量購買",
         "towHour": "2小時到賬",
