--- a/src/assets/lang/zh-CN.json
+++ b/src/assets/lang/zh-CN.json
@@ -2,8 +2,9 @@
     "language": "中文",
     "shareRedEnvelopeText": "请前往BagPay钱包-红包 输入口令👉 {cdk} 👈领取红包 https://bagpay.io/",
     "footer": {
-        "home": "首页",
-        "mine": "我的"
+        "home": "钱包",
+        "otc": "场外",
+        "mine": "个人"
     },
     "common": {
         "envelopeSender": "{sender}的红包",
