--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -383,6 +383,7 @@
         "orderFailed": "Order Failed",
         "enterNum": "Please enter the quantity or amount",
         "enterNum2": "Please enter the number",
+        "enterAmount": "Please enter the amount",
         "selectPayWay": "Please select payment",
         "buyCurrency": "Trading Currency",
         "orderType": "Order Type",
@@ -392,7 +393,7 @@
         "remark": "Remark",
         "maxTrade": "Max Trade",
         "minAmount": "Single item minimum",
-        "payAmount": "Payment Amount",
+        "payAmount": "Amount",
         "bus": "Business",
         "deal": "Deal",
         "turnover": "Turnover",
